Fix Modernizer: Optional.orElseThrow, Path.of